tests/e2e/service_output_readonly.error
Error: syntax error in story at line 2, column 2

2|      event = 2
        ^^^^^^^

E0127: `event` is readonly and can not be assigned to.
